@@ -189,4 +189,6 @@
 	  Improved memory management.
 	  Improved new implementation of struct arrays.
 	  Managment of an history (ASCII) file save in ~/.gdl/history (with memory of previous sessions)
-
+	  Add initial CURSOR, limited but functionnal (know
+	  limitations documented in program)
+ 
